Update footer centered display style to display correct on IE11 and all browsers.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,7 +752,6 @@ table a:hover {
   display: block;
   width: 100%;
   text-align: center;
-
 }
 
 .modal-link {
@@ -851,9 +850,16 @@ table a:hover {
 .personal-logo,
 .enquire-footer,
 .socials {
-  text-align: center;
-  margin: auto;
   color: #fafafa;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .socials-pair-one,
